--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 
 		<script type="text/javascript" src="js/classes/Player.js"></script>
 		<script type="text/javascript" src="js/classes/Soil.js"></script>
-		<script type="text/javascript" src="js/classes/Plant.js"></script>		
+		<script type="text/javascript" src="js/classes/Plant.js"></script>
+		<script type="text/javascript" src="js/classes/Item.js"></script>
+
+		<script type="text/javascript" src="js/classes/UI.js"></script>		
 
 		<script type="text/javascript" src="js/states/Preload.js"></script>
 		<script type="text/javascript" src="js/states/Game.js"></script>
